Update Global Settings “settings”

--- a/content/site.yaml
+++ b/content/site.yaml
@@ -1,6 +1,6 @@
 site_title: Mayfair Commons
 phone_number: 773-205-7862
-office_hours: "Mon-Fri: 9am - 5pm (Office closed on weekends)"
+office_hours: "Mon-Fri: 9am - 5pm (Office closed on Saturday & Sunday)"
 address:
   street: 4444 W Lawrence Ave
   city: Chicago
